packages/babel-parser/test/fixtures/experimental/structs/invalid-struct-decorators/input.js
@f
struct S {}

class C {}
